# AnswerSetNetworks

./: .env  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
demos/: 2-MNIST_addition.ipynb  4-queens.ipynb  draw.ipynb
experiments/: mnist_addition.py  n_queens.py  promis_paris.py
experiments/scripts/: mnist_add.sh  mnist_batch_size_tradeoff.sh  mnist_dppl_comparison.sh  n_queens.sh  promis_paris.sh
src/asn/: __init__.py  asn.py
src/asn/data/: __init__.py  expression.py  reasoning_graph.py  utils.py
src/asn/data/datasets/: download_datasets.py  family_relations.py  mnist_addition.py  shapeworld4.py
src/asn/models/: alexnet.py  einsum_wrapper.py  llm_wrapper.py  promis_mock_model.py  slot_attention.py
src/asn/solver/: __init__.py  graph_block.py  npp_context.py  solver.py  solving_context.py  stable_model_context.py
src/asn/solver/gnn/: __init__.py  constr.py  gnn.py  message_passing.py
src/asn/utils/: __init__.py  collections.py  load_dotenv.py  relop.py
src/tests/data/: test_reasoning_graph.py
